--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+@font-face {
+    font-family: webfont;
+    src: url(assets/fonts/Inter-VariableFont_slnt\,wght.ttf);
+  }
 body {
-    font-family: Arial, sans-serif;
+    font-family:webfont;
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
     color: #333;
 }
+
 
 .site-logo {
     font-size: 40px;
